# elections-vote-analysis

./: .gitignore  Query.py  index.html  main.py  notes.md  project.ipynb  project.py  project_updated.py  pyproject.toml  votes.csv  votes.json
.ipynb_checkpoints/: Query-checkpoint.py  project-checkpoint.ipynb  project_updated-checkpoint.py
.spyproject/config/: workspace.ini
