[project]
name = "elections-vote-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandoc>=2.4",
    "pip>=25.3",
    "pymongo>=4.15.5",
    "seaborn>=0.13.2",
]

[tool.ruff]
line-length = 420

[tool.pyright]
typeCheckingMode = "basic"
